working on exporting data

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@ h1.title {
 body {
   padding-bottom: 25px;
 }
+@media print {
+  .no-print,
+  .no-print * {
+    display: none !important;
+  }
+}
